--- a/index.html
+++ b/index.html
@@ -945,13 +945,13 @@
                     <div>
                         <h3 style="font-size: 18px; color: #2d3748; margin-bottom: 25px;">
                             Solicitudes Pendientes 
-                            <span id="pending-badge" style="background: #E53E3E; color: white; padding: 2px 8px; border-radius: 10px; font-size: 12px; margin-left: 5px; display: none;">0</span>
+                            <span id="pending-badge" style="background: #E53E3E; color: white; padding: 2px 8px; border-radius: 10px; font-size: 12px; margin-left: 5px;">0</span>
                         </h3>
                         
                         <div id="solicitudes-container">
                             </div>
 
-                        <div class="sapiens-card" style="margin-top: 20px; border: 2px solid #F2C94C; padding: 20px; background: #FFFDF5;">
+                        <div id="tarifa-action-card" class="sapiens-card" style="margin-top: 20px; border: 2px solid #F2C94C; padding: 20px; background: #FFFDF5; display: none;">
                             <h4 style="margin-top: 0; font-size: 14px; color: #D97706;">⚡ Acción Requerida</h4>
                             <p style="font-size: 12px; color: #666;">Define tu tarifa por hora para aparecer en búsquedas.</p>
                             <div style="display: flex; gap: 10px;">
