interacción en tiempo realmejorada

--- a/index.html
+++ b/index.html
@@ -970,6 +970,16 @@
                             </div>
                         </div>
                     </div>
+                                        <div>
+                        <h3 style="font-size: 18px; color: #2d3748; margin-bottom: 25px;">
+                            📅 Clases Agendadas
+                            <span style="background: #48BB78; color: white; padding: 2px 8px; border-radius: 10px; font-size: 12px; margin-left: 5px;" id="clases-count">0</span>
+                        </h3>
+                        
+                        <div id="clases-aceptadas-container">
+                            <p style="text-align:center; color:#999; padding:20px;">Cargando clases agendadas...</p>
+                        </div>
+                    </div>
                 </div>
             </div>
     </div>
